# lxpanel-window-title

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
po/: LINGUAS  POTFILES.in
src/: Makefile.am  windowtitle.c
